// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Learn Should match the snapshot 1`] = `
<div
  className="learn-container"
>
  <hgroup>
    <h1>
      Match
    </h1>
    <h4>
      Get 3 correct and a tree will grow in your forest!
    </h4>
  </hgroup>
  <div
    className="term-container"
  >
    <DefinitionCard
      definition="Indicates that the enclosed HTML provides contact information for a person or people, or for an organization."
      termType="html tag"
    />
    <MultipleChoice
      currentAnswer="<address>"
      wrongAnswers={
        Array [
          "<header>",
          "<article>",
          "<cite>",
        ]
      }
    />
  </div>
  <h2>
     correct answers!
  </h2>
</div>
`;

exports[`Learn no props Should match the snapshot without props 1`] = `
<div
  className="learn-container"
>
  <hgroup>
    <h1>
      Match
    </h1>
    <h4>
      Get 3 correct and a tree will grow in your forest!
    </h4>
  </hgroup>
  <p>
    Preparing your terms...
  </p>
  <h2>
     correct answers!
  </h2>
</div>
`;
